browser/themes/shared/urlbar-searchbar.inc.css
/* ... */
#urlbar:-moz-lwtheme:hover,
#navigator-toolbox #searchbar:-moz-lwtheme:hover {
  background-color: var(--lwt-toolbar-field-background-color, white);
}

#urlbar:not(.hidden-focus)[focused="true"],
#searchbar:focus-within {
  border-color: var(--toolbar-field-focus-border-color);
}

#urlbar[breakout] {
  position: absolute;
  z-index: 2;
  top: 0;
  margin-top: -@urlbarBreakoutVerticalExtend@;
  margin-inline-start: -@urlbarBreakoutHorizontalExtend@;
  width: calc(var(--urlbar-width) + 2 * @urlbarBreakoutHorizontalExtend@);
  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
}

#urlbar[breakout] > #urlbar-input-container {
  height: calc(var(--urlbar-toolbar-height) + 2 * @urlbarBreakoutVerticalExtend@ - 2px );
  width: 100%;
  padding-block: calc(@urlbarBreakoutVerticalExtend@ + (var(--urlbar-toolbar-height) - var(--urlbar-height)) / 2);
  padding-inline: @urlbarBreakoutHorizontalExtend@;
}

#urlbar:not(.hidden-focus):-moz-lwtheme[focused="true"],
#navigator-toolbox #searchbar:focus-within:-moz-lwtheme {
  background-color: var(--lwt-toolbar-field-focus, var(--lwt-toolbar-field-background-color, white));
  color: var(--lwt-toolbar-field-focus-color, var(--lwt-toolbar-field-color, black));
}

:root[lwt-selection] #urlbar-input:-moz-lwtheme::selection,
:root[lwt-selection] .searchbar-textbox:-moz-lwtheme::selection {
  background-color: var(--lwt-toolbar-field-highlight, Highlight);
  color: var(--lwt-toolbar-field-highlight-text, HighlightText);
}

:root[uidensity=compact] #urlbar,
:root[uidensity=compact] #searchbar {
  min-height: 26px;
}

:root[uidensity=touch] #urlbar,
:root[uidensity=touch] #searchbar {
  min-height: 32px;
}

:root[chromehidden~="toolbar"] #urlbar-container {
  
  padding-inline-end: 0;
}

:root[customizing] .urlbar-input-box {
  visibility: hidden;
}

#urlbar-input,
#urlbar-scheme {
  -moz-box-flex: 1;
  background-color: transparent;
  color: inherit;
  border: none;
  padding: 0;
}

#urlbar-container {
  -moz-box-align: center;
}

#urlbar-search-splitter {
  

  min-width: 12px;
  margin: 0 -6px;
  position: relative;
  border: none;
  background: transparent;
  -moz-appearance: none;
}


.pageAction-panel-button > .toolbarbutton-icon {
  width: 16px;
  height: 16px;
}

#pageAction-panel-bookmark,
#star-button {
  list-style-image: url("chrome://browser/skin/bookmark-hollow.svg");
}
#pageAction-panel-bookmark[starred],
#star-button[starred] {
  list-style-image: url("chrome://browser/skin/bookmark.svg");
}
#star-button[starred] {
  fill-opacity: 1;
  fill: var(--toolbarbutton-icon-fill-attention);
}

#pocket-button,
#pageAction-panel-pocket {
  list-style-image: url("chrome://browser/skin/pocket-outline.svg");
}

#pocket-button-box[open="true"] > #pocket-button,
#pocket-button-box[pocketed="true"] > #pocket-button {
  list-style-image: url("chrome://browser/skin/pocket.svg");
}

#pocket-button-box[animate="true"] > #pocket-button,
#pocket-button[open="true"][animationsenabled] > .toolbarbutton-icon {
  fill: transparent;
}

#pocket-button-box[open="true"] > #pocket-button,
#pocket-button-box[pocketed="true"] > #pocket-button {
  fill: #ef4056;
  fill-opacity: 1;
}

#pageAction-panel-pinTab,
#pageAction-urlbar-pinTab {
  list-style-image: url("chrome://browser/skin/pin-tab.svg");
}

#pageAction-panel-pinTab[pinned],
#pageAction-urlbar-pinTab[pinned] {
  list-style-image: url("chrome://browser/skin/unpin-tab.svg");
}

#pageAction-panel-copyURL,
#pageAction-urlbar-copyURL {
  list-style-image: url("chrome://browser/skin/link.svg");
}

#pageAction-panel-emailLink,
#pageAction-urlbar-emailLink {
  list-style-image: url("chrome://browser/skin/mail.svg");
}

#pageAction-panel-sendToDevice,
#pageAction-urlbar-sendToDevice {
  list-style-image: url("chrome://browser/skin/send-to-device.svg");
}

#pageAction-panel-pinTab:-moz-locale-dir(rtl) > .toolbarbutton-icon,
#pageAction-urlbar-pinTab:-moz-locale-dir(rtl),
#pageAction-panel-sendToDevice:-moz-locale-dir(rtl) > .toolbarbutton-icon,
#pageAction-urlbar-sendToDevice:-moz-locale-dir(rtl) {
  transform: scaleX(-1);
}

.pageAction-sendToDevice-device[clientType=phone] {
  list-style-image: url("chrome://browser/skin/device-phone.svg");
}

.pageAction-sendToDevice-device[clientType=tablet] {
  list-style-image: url("chrome://browser/skin/device-tablet.svg");
}

.pageAction-sendToDevice-device[clientType=desktop] {
  list-style-image: url("chrome://browser/skin/device-desktop.svg");
}

.pageAction-sendToDevice-device[clientType=tv] {
  list-style-image: url("chrome://browser/skin/device-tv.svg");
}

.pageAction-sendToDevice-device[clientType=vr] {
  list-style-image: url("chrome://browser/skin/device-vr.svg");
}

.pageAction-sendToDevice-device.signintosync,
#pageAction-panel-sendToDevice-fxa,
#pageAction-urlbar-sendToDevice-fxa {
  list-style-image: url("chrome://browser/skin/sync.svg");
}

#pageAction-panel-addSearchEngine > .toolbarbutton-badge-stack > .toolbarbutton-icon {
  width: 16px;
  height: 16px;
}
#pageAction-panel-addSearchEngine > .toolbarbutton-badge-stack > .toolbarbutton-badge {
  display: -moz-box;
  background: url(chrome://browser/skin/search-indicator-badge-add.svg) no-repeat center;
  box-shadow: none;
  
  margin: -4px 0 0 !important;
  margin-inline-end: -4px !important;
  width: 11px;
  height: 11px;
  min-width: 11px;
  min-height: 11px;
}

#pageActionActivatedActionPanel[actionID="pocket"] {
  --arrowpanel-background: #fbfbfb;
}



#page-action-buttons {
  -moz-box-align: center;
}

#pageActionSeparator {
  



  border-inline-start: 1px solid var(--urlbar-separator-color);
  border-image: linear-gradient(transparent 15%, var(--urlbar-separator-color) 15%, var(--urlbar-separator-color) 85%, transparent 85%);
  border-image-slice: 1;
  width: 1px;
  height: 28px;
  visibility: hidden;
}

:root[uidensity=compact] #pageActionSeparator {
  height: 24px;
}

:root[uidensity=touch] #pageActionSeparator {
  height: 30px;
}
/* ... */

