Bug 1577742 - Inrease the megabar's z-index so it overlaps the tab overflow indicators. r=harry
Differential Revision: https://phabricator.services.mozilla.com/D44135

UltraBlame original commit: 21483daf4d9db7fbeae739085f842d522ad38d0f

--- a/browser/themes/shared/urlbar-searchbar.inc.css
+++ b/browser/themes/shared/urlbar-searchbar.inc.css
@@ -87,7 +87,9 @@
 
 #urlbar[breakout] {
   position: absolute;
-  z-index: 2;
+  
+
+  z-index: 3;
   top: 0;
   margin-top: -@urlbarBreakoutVerticalExtend@;
   margin-inline-start: -@urlbarBreakoutHorizontalExtend@;
